--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,68 @@
 	<classpathentry kind="lib" path="C:/Users/Latha/Downloads/HelpDeskNew/HelpDeskNew/WebContent/WEB-INF/lib/commons-validator.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Latha/Downloads/HelpDeskNew/HelpDeskNew/WebContent/WEB-INF/lib/jakarta-oro.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Latha/Downloads/HelpDeskNew/HelpDeskNew/WebContent/WEB-INF/lib/struts.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Latha/Downloads/PackageForAzureLibrariesForJava.zip"/>
+	<classpathentry kind="con" path="com.microsoftopentechnologies.windowsazure.tools.SDK_CONTAINER/0.9.0">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/annotation-detector-3.0.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/antlr.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/applicationinsights-core-1.0.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/applicationinsights-web-1.0.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/azure-core-0.9.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/azure-media-0.9.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/azure-servicebus-0.9.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/azure-serviceruntime-0.9.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/azure-storage-4.0.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/azure-svc-mgmt-0.9.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/azure-svc-mgmt-compute-0.9.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/azure-svc-mgmt-media-0.9.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/azure-svc-mgmt-network-0.9.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/azure-svc-mgmt-scheduler-0.9.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/azure-svc-mgmt-sql-0.9.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/azure-svc-mgmt-storage-0.9.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/azure-svc-mgmt-websites-0.9.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/azure-tracing-util-0.9.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-beanutils.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-digester.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-fileupload-1.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-lang3-3.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-validator.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gson-1.7.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/guava-18.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/httpclient-4.3.6.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/httpcore-4.3.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-annotations-2.6.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-core-2.6.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-core-asl-1.9.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-databind-2.6.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-jaxrs-1.9.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-mapper-asl-1.9.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-xc-1.9.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jakarta-oro.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jaxb-impl-2.2.3-1-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jaxb-impl-2.2.3-1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-client-1.13-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-client-1.13.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-core-1.13-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-core-1.13.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-json-1.13-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-json-1.13.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jettison-1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jjwt-0.5.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsr305-1.3.9.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/license.txt"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mail-1.4.5-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mail-1.4.5.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ThirdPartyNotices.txt"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
